These docs are outdated, but this snippet particularly so. Fixed.

--- a/dada/extras/documentation/pod_source/COOKBOOK-integration.pod
+++ b/dada/extras/documentation/pod_source/COOKBOOK-integration.pod
@@ -159,10 +159,10 @@ Add something like this to your script that keeps all this info sync'd up:
 
     use DADA::MailingList::Settings; 
     use DADA::Security::Password; 
-    my $ls = DADA::MailingList:Settings->new(-List => 'my_list'); 
+    my $ls = DADA::MailingList:Settings->new({-list => 'my_list'}); 
        $ls->save({
 			-settings => {
-       			password => DADA::Security::Password::encrypt_passwd('your_password'),
+       			password => 'your_password',
        		}
 		}); 
 
