$VER change to v11.4.0

--- a/dada/extras/documentation/pod_source/changes_11_x.pod
+++ b/dada/extras/documentation/pod_source/changes_11_x.pod
@@ -2,6 +2,10 @@
 
 =encoding utf-8
 
+=head1 11.4.0
+
+Fill me out!
+
 =head1 11.3.1
 
 This is mostly a bug-fix release for issues found in the v11.3.0 release of Dada Mail.
