--- a/dada/extras/documentation/pod_source/install_dada_mail-advanced_configuration.pod
+++ b/dada/extras/documentation/pod_source/install_dada_mail-advanced_configuration.pod
@@ -58,13 +58,13 @@ Install Core Five FileManager
 
 Select this option to use B<Core Five FileManager> (L<https://github.com/simogeo/Filemanager>). In Dada Mail, Filemanager uses the same sessioning system as Dada Mail itself, which can make for a smoother experience, if KCFinder is not working correctly. 
 
-=head2 Configure Handling Personal Identifiable Information (PII) 
+=head2 Configure Handling Personally Identifiable Information (PII) 
 
-Personal Identifiable Information (PII) is any information that can be used to identify a person.
+Personally Identifiable Information (PII) is any information that can be used to identify a person.
 
 For example: an email address can pretty easily be tied to one individual. Coupled with the IP Address of where requests to the app comes from, we can then know where this individual is on Earth. The timestamp saved can also tell us when that person was at that specific location. Further, we can then easily create a history of where this individual is over time, as well as exactly how they interacted with the application.
 
-By default, Dada Mail attempts to record I<as little Personal Identifiable Information as possible>, and this is reflected with the defaults in the app. This is done for many reasons. One is to respect the privacy of the users of the app. Another is to make sure that a mailing list follows the guidelines put down by GDPR. So, by default, email addresses are not logged for analytic purposes (message opens, clickthroughs, etc), and IP Addresses (which locations can be extrapolated from) are anonymized.
+By default, Dada Mail attempts to record I<as little Personally Identifiable Information as possible>, and this is reflected with the defaults in the app. This is done for many reasons. One is to respect the privacy of the users of the app. Another is to make sure that a mailing list follows the guidelines put down by GDPR. So, by default, email addresses are not logged for analytic purposes (message opens, clickthroughs, etc), and IP Addresses (which locations can be extrapolated from) are anonymized.
 
 =head3 Allow email addresses to be logged for tracking/analytical purposes 
 
@@ -572,7 +572,7 @@ L<https://developers.google.com/maps/documentation/javascript/get-api-key>
 
 If this key is not available, the Tracker plugin will not show these maps. Rather, a table will be presented with similar information, broken down by location. 
 
-Related to showing information via map charts, Dada Mail, by default anonymized IP addresses when logging information like opens and clickthroughs. See, B<Configure Handling Personal Identifiable Information (PII) > in this same doc. 
+Related to showing information via map charts, Dada Mail, by default anonymized IP addresses when logging information like opens and clickthroughs. See, B<Configure Handling Personally Identifiable Information (PII) > in this same doc. 
 
 =head2 Configure CAPTCHA Options
 
