--- a/dada/extras/documentation/pod_source/install_dada_mail.pod
+++ b/dada/extras/documentation/pod_source/install_dada_mail.pod
@@ -52,7 +52,7 @@ Let's go!
 		
 	</div> 
 </div> 
-		2<div class="row">
+		<div class="row">
 	<div class="small-12 medium-8 large-8 medium-centered large-centered columns">	
 
     <a 
