--- a/dada/extras/documentation/pod_source/changes_11_x.pod
+++ b/dada/extras/documentation/pod_source/changes_11_x.pod
@@ -12,10 +12,55 @@ If problems occur when trying to send a message via the option, "Grab content fr
 
 Error reporting has also been enhanced in similar ways when cropping a webpage by id/class. 
 
+L<https://github.com/justingit/dada-mail/issues/847>
 
+L<https://github.com/justingit/dada-mail/issues/828>
 
-=head3 Bugfixes 
+=head3 Membership: View: Authorized Senders
 
+The, B<Membership: View: Authorized Senders> screen now has descriptive text on just what the sublist is. 
+
+If the option to send out messages without needing moderation is enabled in Bridge, that is also mentioned and described.
+
+L<https://github.com/justingit/dada-mail/issues/840>
+
+=head3 The Bounce Handler email address is listed in the, B<Mailing List: List Information> screen
+
+This is to make it easier to understand how to set up the Bounce Handler correctly to process bounced messages. 
+
+L<https://github.com/justingit/dada-mail/issues/830>
+
+=head3 
+
+=head2 Bugfixes 
+
+=head3 Send a Webpage: Content via a URL: no feedback/error thrown if problems were found with the crop
+
+L<https://github.com/justingit/dada-mail/issues/847>
+
+=head3 List Consents can be blank 
+
+L<https://github.com/justingit/dada-mail/issues/837>
+
+=head3 "available_lists()" SQL query just isn't specific enough to find the actual lists available 
+
+L<https://github.com/justingit/dada-mail/issues/834>
+
+=head3 Send a Webpage errors should be shown in Send a Message screen (or at least in error log)
+
+L<https://github.com/justingit/dada-mail/issues/828>
+
+=head3 Incorrect Profile Login asks if you are registered, even if "Registering" is disabled. 
+
+L<https://github.com/justingit/dada-mail/issues/827>
+
+=head3 "Already Subscribed" email notification does not show subscriber email correctly
+
+L<https://github.com/justingit/dada-mail/issues/826>
+
+=head3 Plugin: Tracker: Hard Bounce report sometimes not shown #848 
+
+L<https://github.com/justingit/dada-mail/issues/848>
 
 =head1 11.4.4
 
