--- a/dada/extras/documentation/pod_source/changes_11_x.pod
+++ b/dada/extras/documentation/pod_source/changes_11_x.pod
@@ -8,13 +8,13 @@
 
 =head3 Testers List
 
-Testing out your mass mailing is a great idea to do, before you commit to sending out the message to your entire mailing list. 
+Test sending out your mass mailing is a great idea to do, before you commit to sending out the message to your entire mailing list. 
 
-In past versions, Dada Mail could onoy send only send a  test mass mailing to one email address at one time.
+In past versions, Dada Mail could only send only send a test mass mailing to one email address at one time.
 
-Now, starting with v11.5.0, Dada Mail can send a test mass mailing to multiple addresses at once.
+Starting with v11.5.0, Dada Mail can send a test mass mailing to multiple addresses at once.
 
-By default, this list of test recipients can be created per draft message by typing in the email addresses in the same text box that previously only supported one email address. By default, up to ten email addresses may be added to this text box. 
+By default, this list of test recipients can be created per draft message by typing in the email addresses in the same text box that previously only supported one email address. By default, up to ten email addresses may be added to this text box, and sent a test mass mailing.
 
 Additionally, a Testers List may be enabled so that the same list of addresses can be sent a test mass mailing for all draft messages. This sublist can be administrated simnilarly to your main Subscribers list. 
 
@@ -26,7 +26,7 @@ When you're ready to send out a test mass mailing, click the button at the top o
 
 To enable the Testers List, go to B<Membership: Options> in the list control panel. Find the section labeled, B<Testers List> to see the options available to you. Check the option labeled, B<[x] Activate Testers List> to enable the Testers List. 
 
-Options below this checkbox will allow you to set if there's a limit to how many addresses you may have in your Testers list as well as what that limit is. The limit set here will also affect how many addresses you can add to the text box in the drafts screen, per draft message. 
+Options below this checkbox will allow you to specifiy if there's a limit to how many addresses you may have in your Testers list as well as what that limit is. The limit set here will also affect how many addresses you can add to the text box in the drafts screen, per draft message. 
 
 Once enabled, the Testers list can be accessed in the list control panel under, B<Membership View>. Click the tab labeled, "Testers" to see add/edit/remove addresses in this sublist. 
 
@@ -34,7 +34,7 @@ And once enabled, you can toggle between using your Testers list and a unique li
 
 Sending a test message can be useful in a few different ways. With a test mass mailing, you can make sure that delivery is working to specific addresses, domains, and email services, and that the email message itself is displaying correctly on a spectrum of services and devices. This can also help you get a checkoff of the content an design of your mass mailing if you're working within a team. 
 
-There are a few things that happen differently when sending out a test mass mailing. None of the recipients of a test mass mailing will be able to unsubscribe through the test mass mailing. Test mass mailings also will not be tracked for things like Opens, Clickthroughs, or Bounces. 
+There are a few things that happen differently when sending out a test mass mailing. To start, none of the recipients of a test mass mailing will be able to unsubscribe through the test mass mailing. Also, test mass mailings will not be tracked for things like Opens, Clickthroughs, or Bounces. 
 
 =head1 11.4.6
 
